add aqstation, airnow and nest support

--- a/components/components.json
+++ b/components/components.json
@@ -17,5 +17,8 @@
       "adafruit-circuitpython-pca9685"
     ]
   },
-  "raspi": {}
+  "raspi": {},
+  "aqstation": {},
+  "airnow": {},
+  "nest": {}
 }
