--- a/components/components.json
+++ b/components/components.json
@@ -2,5 +2,23 @@
   "raspi": {},
   "aqstation": {},
   "airnow": {},
-  "nest": {}
+  "nest": {},
+  "ads1015": {
+    "driver": [
+      "adafruit-circuitpython-ads1x15"
+    ]
+  },
+  "alert": {},
+  "bme280": {
+    "driver": [
+      "adafruit-circuitpython-bme280"
+    ]
+  },
+  "buttons": {},
+  "raspipwm": {},
+  "pca9685": {
+    "driver": [
+      "adafruit-circuitpython-pca9685"
+    ]
+  }
 }
