--- a/components/airnow/airnow.json
+++ b/components/airnow/airnow.json
@@ -1,1 +1,1 @@
-{"init":{ "config": {"apiKey" : "--APIKEY--", "zipCode":  "40601", "distance" : 10 }}, "attr":{}}
+{"init":  {"apiKey": "--APIKEY--", "zipCode": "40601", "distance": 10}, "attr": {}}
